Release history of testicle.
_________________________________________

testicle 1.2 (2007-07-08):

- AssertionError was a stupid name for the exception involved in
  causing a test to FAIL. It's now called "Failure" instead, but the
  old name is retained as a typedef for a while.

testicle 1.1 (2007-07-07):

- Fixed warnings related to constness of string literals, when using
  g++ 4.2 and lots of warnings enabled.

testicle 1.0 (2007-07-02):

- First release, for my personal use.

_________________________________________
$Id$
$Name$